MDEV-34761 : Assertion `client_state_.mode() == wsrep::client_state::m_local' failed in int wsrep::transaction::after_statement(wsrep::unique_lock<wsrep::mutex>&)

@@enforce_storage_engine is local setting and there is no
knowledge how other nodes are configured. Statement
CREATE TABLE xxx ENGINE=yyy is replicated as it is and
if required engine != enforced engine it could lead
inconsistent used storage engine in the cluster.

Fix is to return error and a warning if required engine is not
same as enforced engine.

Signed-off-by: Julius Goryavsky <julius.goryavsky@mariadb.com>